[gd_scene load_steps=10 format=3 uid="uid://bv3fjtxyo1edw"]

[ext_resource type="Script" path="res://Dialogue/Black_Smith DiaLogue/black_smit_dialogue.gd" id="1_af6t5"]
[ext_resource type="Texture2D" uid="uid://dqovjerh5pais" path="res://Art/Inventory/pixil-frame-0 (9).png" id="2_beapg"]
[ext_resource type="Texture2D" uid="uid://nks44vpxcty" path="res://Art/Inventory/pixil-frame-0 (24).png" id="2_ivybf"]
[ext_resource type="FontFile" uid="uid://6twna5ce2qh2" path="res://Celtica-BookOblique.ttf" id="3_vj64c"]
[ext_resource type="Texture2D" uid="uid://bi2u7nikyf5ak" path="res://Art/Inventory/pixil-frame-0 (23).png" id="4_fnvyd"]
[ext_resource type="Texture2D" uid="uid://dcwv5i0elvtl0" path="res://Art/Inventory/pixil-frame-0 (25).png" id="5_f6gr5"]
[ext_resource type="Texture2D" uid="uid://m1cvq8i2om05" path="res://Art/Portraits for convo and animation/Portraits for convo and animation/Blacksmith/Blacksmith Portrait.png" id="5_itghs"]

[sub_resource type="Theme" id="Theme_d7xjy"]

[sub_resource type="ButtonGroup" id="ButtonGroup_143m7"]
allow_unpress = true

[node name="Black_Smit_Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_af6t5")
B_D_file = "res://Dialogue/Black_Smith DiaLogue/Black_smith_dialogue.json"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
process_mode = 3
physics_interpolation_mode = 1
auto_translate_mode = 1
texture_filter = 1
layout_mode = 1
anchors_preset = -1
offset_right = 108.0
offset_bottom = 40.0
scale = Vector2(1.11567, 1.30714)
mouse_filter = 0
texture = ExtResource("2_ivybf")
draw_center = false
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
metadata/_edit_group_ = true

[node name="Name" type="RichTextLabel" parent="NinePatchRect"]
modulate = Color(0.94902, 0.94902, 0.94902, 1)
z_index = 1
texture_filter = 1
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 893.0
offset_bottom = 139.0
scale = Vector2(0.05, 0.05)
theme = SubResource("Theme_d7xjy")
theme_override_colors/table_odd_row_bg = Color(0.9243, 1.2514e-06, 0.482138, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = -4
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/normal_font = ExtResource("3_vj64c")
theme_override_font_sizes/normal_font_size = 100
text = "Name:"
fit_content = true
scroll_following = true
autowrap_mode = 0
tab_size = 1
context_menu_enabled = true
text_direction = 1

[node name="Text" type="RichTextLabel" parent="NinePatchRect"]
process_mode = 3
physics_interpolation_mode = 1
modulate = Color(0.94902, 0.94902, 0.94902, 1)
texture_filter = 1
clip_contents = false
layout_mode = 0
offset_left = 3.0
offset_top = 11.0
offset_right = 1341.0
offset_bottom = 148.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = -4
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/normal_font = ExtResource("3_vj64c")
theme_override_fonts/mono_font = ExtResource("3_vj64c")
theme_override_font_sizes/normal_font_size = 100
text = "chatting...."
fit_content = true
scroll_following = true
autowrap_mode = 2
tab_size = 1

[node name="TextureButton" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 3.58529
offset_top = 29.8361
offset_right = 113.585
offset_bottom = 129.836
scale = Vector2(0.221, 0.075)
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_143m7")
texture_normal = ExtResource("4_fnvyd")
texture_pressed = ExtResource("5_f6gr5")
texture_hover = ExtResource("2_ivybf")
stretch_mode = 0

[node name="Follow Text" type="Label" parent="NinePatchRect/TextureButton"]
z_index = 2
layout_mode = 0
offset_left = 8.11151
offset_top = 36.0014
offset_right = 1976.11
offset_bottom = 936.001
scale = Vector2(0.05, 0.05)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 28
theme_override_constants/shadow_offset_y = -5
theme_override_font_sizes/font_size = 400
text = "Follow me 
"

[node name="unFollow Text" type="Label" parent="NinePatchRect/TextureButton"]
visible = false
z_index = 2
layout_mode = 0
offset_left = 4.05576
offset_top = 36.0014
offset_right = 2078.06
offset_bottom = 494.001
scale = Vector2(0.05, 0.05)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 28
theme_override_constants/shadow_offset_y = -5
theme_override_font_sizes/font_size = 335
text = "unFollow me 
"

[node name="TextureButton2" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 28.0
offset_top = 30.0
offset_right = 178.0
offset_bottom = 130.0
scale = Vector2(0.235, 0.075)
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_143m7")
texture_normal = ExtResource("4_fnvyd")
texture_pressed = ExtResource("5_f6gr5")
texture_hover = ExtResource("2_ivybf")
stretch_mode = 0

[node name="craft_updrade" type="Label" parent="NinePatchRect"]
z_index = 2
layout_mode = 0
offset_left = 32.2676
offset_top = 30.6012
offset_right = 633.268
offset_bottom = 144.601
scale = Vector2(0.05, 0.05)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 75
text = "Craft/Upgrade
"

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect"]
z_index = 1
position = Vector2(86.2009, 13.575)
scale = Vector2(0.03, 0.03)
texture = ExtResource("5_itghs")

[node name="Sprite2D2" type="Sprite2D" parent="NinePatchRect"]
modulate = Color(0.499446, 0.488466, 0.035647, 1)
position = Vector2(86.2009, 15.1051)
scale = Vector2(0.615656, 0.491752)
texture = ExtResource("2_beapg")

[connection signal="pressed" from="NinePatchRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="NinePatchRect/TextureButton2" to="." method="_on_texture_button_2_pressed"]
